cmake_minimum_required(VERSION 3.26)

set(MAIN_PROJECT_NAME "oop")
set(MAIN_EXECUTABLE_NAME "${MAIN_PROJECT_NAME}")


project(${MAIN_PROJECT_NAME})

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

include(cmake/Options.cmake)
include(cmake/CompilerFlags.cmake)
include(cmake/CopyHelper.cmake)



add_executable(${MAIN_EXECUTABLE_NAME}
    main.cpp
        Era.cpp
        Era.h
        Resursa.cpp
        Resursa.h
        Pozitie.cpp
        Pozitie.h
        CampDeLupta.cpp
        CampDeLupta.h
        Cladire.cpp
        Cladire.h
        Unitate.cpp
        Unitate.h
        Jucator.cpp
        Jucator.h
        GameSimulator.cpp
        GameSimulator.h
)


set_compiler_flags(RUN_SANITIZERS TRUE TARGET_NAMES ${MAIN_EXECUTABLE_NAME})

install(TARGETS ${MAIN_EXECUTABLE_NAME} DESTINATION ${DESTINATION_DIR})
if(APPLE)
    install(FILES launcher.command DESTINATION ${DESTINATION_DIR})
endif()

copy_files(FILES tastatura.txt COPY_TO_DESTINATION TARGET_NAME ${MAIN_EXECUTABLE_NAME})
